major window functionality
minimize, restore, close.
full screen, stick-to-side
you name it
with transitions

--- a/src/assets/global.scss
+++ b/src/assets/global.scss
@@ -40,6 +40,12 @@ ul{
     padding :   0;
     margin  :   5px 0 0 0;
 }
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap");
+
+html, body,p {
+    font-family: 'Open Sans', sans-serif;
+}
+  
 
 a{
     padding: 5px;
