animated cursor added
cursor go zoop zoop

--- a/src/assets/global.scss
+++ b/src/assets/global.scss
@@ -54,6 +54,11 @@ a{
     padding: 5px;
     color: #17a2b8;
     text-decoration: none;
+    transition: color 0.7s ease;
+}
+
+a:hover{
+    color:#ec7bb0;
 }
 
 p,a{
