--- a/src/assets/global.scss
+++ b/src/assets/global.scss
@@ -1,13 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Teko:wght@300;400;500;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Finger+Paint&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Bungee&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Bowlby+One+SC&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap');
 
 @font-face {
   font-family: 'BitMicro';
-  src: url('~@/assets/fonts/bitmicro01.ttf') format("truetype");;
+  src: url('~@/assets/fonts/sg10.ttf') format("truetype");;
   
   font-weight: normal;
   font-style: normal;
