fix: highscore blunder + added realtime firestore fetch

--- a/src/assets/global.scss
+++ b/src/assets/global.scss
@@ -3,8 +3,7 @@
 
 @font-face {
   font-family: 'SG10';
-  src: url('~@/assets/fonts/SG10.ttf') 
-  format("truetype");
+  src: url('~@/assets/fonts/SG10.ttf') format("truetype");
 }
 
 html, body {
