--- a/src/assets/global.scss
+++ b/src/assets/global.scss
@@ -1,184 +1,194 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Finger+Paint&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Finger+Paint&display=swap");
 
 @font-face {
-  font-family: 'SG10';
-  src: url('~@/assets/fonts/SG10.ttf') format("truetype");
+  font-family: "SG10";
+  src: url("~@/assets/fonts/SG10.ttf") format("truetype");
 }
 
-html, body {
-    margin      :   0px;
-    height      :   100%;
+html,
+body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
 
-    font-family: 'Open Sans', sans-serif;
-    font-weight: 300;
-    font-size: 30px;
+  font-family: "Open Sans", sans-serif;
+  font-weight: 300;
+  font-size: 30px;
 
-    /* letter-spacing: 0.5px; */
+  /* letter-spacing: 0.5px; */
 
-    overflow-x  :   hidden;
-    overflow-y  :   hidden;
+  overflow-x: hidden;
+  overflow-y: hidden;
 }
 
-body{
-    height                  :   100%;
-    /* background-image        :   url("./assets/gifs/1.gif");  */
-    background-position     :   center;    
-    background-repeat       :   no-repeat; 
-    background-size         :   cover; 
+body {
+  height: 100%;
+  /* background-image        :   url("./assets/gifs/1.gif");  */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 
-    -webkit-touch-callout   :   none;
-    -webkit-user-select     :   none;
-    -khtml-user-select      :   none;
-    -moz-user-select        :   none;
-    -ms-user-select         :   none;
-    user-select             :   none;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
-h1,h2,h3,h4,h5,h6,p,a{
-    padding-left: 24px;
-    padding-right: 24px;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+a {
+  padding-left: 24px;
+  padding-right: 24px;
 }
 
-ol{
-    padding:0
+ol {
+  padding: 0;
 }
 
-ul{
-    padding :   0;
-    margin  :   5px 0 0 0;
+ul {
+  padding: 0;
+  margin: 5px 0 0 0;
 }
 
-html, body,p {
-    font-family: 'Open Sans', sans-serif;
-}
-  
-
-a{
-    margin:0;
-    padding: 5px;
-    color: #17a2b8;
-    text-decoration: none;
-    transition: color 0.7s ease;
+html,
+body,
+p {
+  font-family: "Open Sans", sans-serif;
 }
 
-a:hover{
-    color:#ec7bb0;
+a {
+  margin: 0;
+  padding: 5px;
+  color: #17a2b8;
+  text-decoration: none;
+  transition: color 0.7s ease;
 }
 
-p,a{
-    outline: 0;
+a:hover {
+  color: #ec7bb0;
 }
 
+p,
+a {
+  outline: 0;
+}
 
 // V-Tooltip
 
 .tooltip {
-    display: block !important;
-    z-index: 100000;
-  
-    .tooltip-inner {
-      background: black;
-      color: white;
-      border-radius: 16px;
-      padding: 5px 10px 4px;
-    }
-  
+  display: block !important;
+  z-index: 100000;
+
+  .tooltip-inner {
+    background: black;
+    color: white;
+    border-radius: 16px;
+    padding: 5px 10px 4px;
+  }
+
+  .tooltip-arrow {
+    width: 0;
+    height: 0;
+    border-style: solid;
+    position: absolute;
+    margin: 5px;
+    border-color: black;
+    z-index: 1;
+  }
+
+  &[x-placement^="top"] {
+    margin-bottom: 5px;
+
     .tooltip-arrow {
-      width: 0;
-      height: 0;
-      border-style: solid;
-      position: absolute;
-      margin: 5px;
-      border-color: black;
-      z-index: 1;
-    }
-  
-    &[x-placement^="top"] {
-      margin-bottom: 5px;
-  
-      .tooltip-arrow {
-        border-width: 5px 5px 0 5px;
-        border-left-color: transparent !important;
-        border-right-color: transparent !important;
-        border-bottom-color: transparent !important;
-        bottom: -5px;
-        left: calc(50% - 5px);
-        margin-top: 0;
-        margin-bottom: 0;
-      }
-    }
-  
-    &[x-placement^="bottom"] {
-      margin-top: 5px;
-  
-      .tooltip-arrow {
-        border-width: 0 5px 5px 5px;
-        border-left-color: transparent !important;
-        border-right-color: transparent !important;
-        border-top-color: transparent !important;
-        top: -5px;
-        left: calc(50% - 5px);
-        margin-top: 0;
-        margin-bottom: 0;
-      }
-    }
-  
-    &[x-placement^="right"] {
-      margin-left: 5px;
-  
-      .tooltip-arrow {
-        border-width: 5px 5px 5px 0;
-        border-left-color: transparent !important;
-        border-top-color: transparent !important;
-        border-bottom-color: transparent !important;
-        left: -5px;
-        top: calc(50% - 5px);
-        margin-left: 0;
-        margin-right: 0;
-      }
-    }
-  
-    &[x-placement^="left"] {
-      margin-right: 5px;
-  
-      .tooltip-arrow {
-        border-width: 5px 0 5px 5px;
-        border-top-color: transparent !important;
-        border-right-color: transparent !important;
-        border-bottom-color: transparent !important;
-        right: -5px;
-        top: calc(50% - 5px);
-        margin-left: 0;
-        margin-right: 0;
-      }
-    }
-  
-    &.popover {
-      $color: #f9f9f9;
-  
-      .popover-inner {
-        background: $color;
-        color: black;
-        padding: 24px;
-        border-radius: 5px;
-        box-shadow: 0 5px 30px rgba(black, .1);
-      }
-  
-      .popover-arrow {
-        border-color: $color;
-      }
-    }
-  
-    &[aria-hidden='true'] {
-      visibility: hidden;
-      opacity: 0;
-      transition: opacity .15s, visibility .15s;
-    }
-  
-    &[aria-hidden='false'] {
-      visibility: visible;
-      opacity: 1;
-      transition: opacity .15s;
+      border-width: 5px 5px 0 5px;
+      border-left-color: transparent !important;
+      border-right-color: transparent !important;
+      border-bottom-color: transparent !important;
+      bottom: -5px;
+      left: calc(50% - 5px);
+      margin-top: 0;
+      margin-bottom: 0;
     }
   }
+
+  &[x-placement^="bottom"] {
+    margin-top: 5px;
+
+    .tooltip-arrow {
+      border-width: 0 5px 5px 5px;
+      border-left-color: transparent !important;
+      border-right-color: transparent !important;
+      border-top-color: transparent !important;
+      top: -5px;
+      left: calc(50% - 5px);
+      margin-top: 0;
+      margin-bottom: 0;
+    }
+  }
+
+  &[x-placement^="right"] {
+    margin-left: 5px;
+
+    .tooltip-arrow {
+      border-width: 5px 5px 5px 0;
+      border-left-color: transparent !important;
+      border-top-color: transparent !important;
+      border-bottom-color: transparent !important;
+      left: -5px;
+      top: calc(50% - 5px);
+      margin-left: 0;
+      margin-right: 0;
+    }
+  }
+
+  &[x-placement^="left"] {
+    margin-right: 5px;
+
+    .tooltip-arrow {
+      border-width: 5px 0 5px 5px;
+      border-top-color: transparent !important;
+      border-right-color: transparent !important;
+      border-bottom-color: transparent !important;
+      right: -5px;
+      top: calc(50% - 5px);
+      margin-left: 0;
+      margin-right: 0;
+    }
+  }
+
+  &.popover {
+    $color: #f9f9f9;
+
+    .popover-inner {
+      background: $color;
+      color: black;
+      padding: 24px;
+      border-radius: 5px;
+      box-shadow: 0 5px 30px rgba(black, 0.1);
+    }
+
+    .popover-arrow {
+      border-color: $color;
+    }
+  }
+
+  &[aria-hidden="true"] {
+    visibility: hidden;
+    opacity: 0;
+    transition: opacity 0.15s, visibility 0.15s;
+  }
+
+  &[aria-hidden="false"] {
+    visibility: visible;
+    opacity: 1;
+    transition: opacity 0.15s;
+  }
+}
