style: body background dark

--- a/src/assets/global.scss
+++ b/src/assets/global.scss
@@ -26,6 +26,7 @@ body {
 body {
   height: 100%;
   /* background-image        :   url("./assets/gifs/1.gif");  */
+  background-color: black;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
